<resources>
    <string name="app_name" translatable="false">PrimeiroProjeto</string>
    <string name="label_titulo">Calculator</string>
    <string name="label_peso">Weigth</string>
    <string name="hint_peso">Example: 1.7</string>
    <string name="label_altura">Height</string>
    <string name="hint_altura">Example: 1.7</string>
    <string name="botao_calcular">Calculate</string>
    <string name="botao_limpar">Clean</string>
    <string name="label_imc">YOUR IMC IS</string>
</resources>
