<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".FormularioActivity">

    <TextView
        android:text="@string/label_titulo"
        style="@style/tituloPrincipal"/>

    <TextView
        android:id="@+id/inputPeso"
        style="@style/label"
        android:text="@string/label_peso"/>

    <EditText
        style="@style/input"
        android:hint="@string/hint_peso"/>

    <TextView
        android:id="@+id/inputAltura"
        style="@style/label"
        android:text="@string/label_altura"/>

    <EditText
        style="@style/input"
        android:hint="@string/hint_altura"/>

    <Button
        android:id="@+id/btnCalcular"
        style="@style/botao"
        android:text="@string/botao_calcular"/>

    <Button
        android:id="@+id/btnLimpar"
        style="@style/botao"
        android:text="@string/botao_limpar"/>
</LinearLayout>